@@ -1,0 +1,9 @@
+fileFormatVersion: 2
+guid: e344568228caa2e44b16729c51059e65
+folderAsset: yes
+timeCreated: 1502722551
+licenseType: Free
+DefaultImporter:
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
