@@ -1,0 +1,9 @@
+fileFormatVersion: 2
+guid: 3bd90aa36913d2748a81980cdc4fb557
+timeCreated: 1502722624
+licenseType: Free
+ShaderImporter:
+  defaultTextures: []
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
