@@ -123,6 +123,9 @@ public class MeshBuilder : MonoBehaviour
 	public string Name;
 	public string AssetFolder = "Assets/Resources/";
 
+	public bool PreviewMesh = true;
+	//public MaterialPropertyBlock PreviewMeshMpb = new MaterialPropertyBlock();
+
 
 	void Start()
 	{
@@ -134,6 +137,16 @@ public class MeshBuilder : MonoBehaviour
 
 	void Update()
 	{
+		if (PreviewMesh)
+		{
+			bool selected = System.Array.IndexOf(UnityEditor.Selection.gameObjects, gameObject) >= 0;
+
+			MaterialPropertyBlock block = new MaterialPropertyBlock();
+			block.SetColor("_Color", new Color(0.7f, 0.7f, selected ? 0.7f : 0f, 0.6f));
+
+			for (int i = 0; i < Faces.Length; ++i)
+				Graphics.DrawMesh(ResultMesh, transform.localToWorldMatrix, PreviewMaterial, 0, null, i, block);
+		}
 	}
 
 
@@ -172,9 +185,12 @@ public class MeshBuilder : MonoBehaviour
 				Transform trans = transform.Find(i.ToString());
 				GameObject obj = trans ? trans.gameObject : new GameObject(i.ToString());
 
-				obj.transform.parent = transform;
-				obj.transform.localPosition = lastTransform ? lastTransform.localPosition : Vector3.zero;
-				obj.transform.localRotation = lastTransform ? lastTransform.localRotation : Quaternion.identity;
+				if (!trans)
+				{
+					obj.transform.parent = transform;
+					obj.transform.localPosition = lastTransform ? lastTransform.localPosition : Vector3.zero;
+					obj.transform.localRotation = lastTransform ? lastTransform.localRotation : Quaternion.identity;
+				}
 
 				obj.SetActive(true);
 
